# idl

./: hello.xml  normalize-idl.xslt  xenclient_idl.dtd
interfaces/: api_host.xml  api_product.xml  api_vm.xml  cdrom_daemon.xml  ctxusb_daemon.xml  db.xml  dbus.xml  disman.xml  fusechat.xml  guest.xml  input_daemon.xml  network.xml  network_daemon.xml  network_domain.xml  network_interface.xml  network_nm.xml  network_slave.xml  org_freedesktop_hal_manager.xml  org_freedesktop_networkmanager.xml  org_freedesktop_upower.xml  org_freedesktop_upower_device.xml  rpc_proxy.xml  storage_sr.xml  storage_vdi.xml  storage_vdi_node.xml  storehouse.xml  surfman.xml  transfer.xml  transfermgr.xml  updatemgr.xml  vglass.xml  vm_disk.xml  vm_nic.xml  xcpmd.xml  xenmgr.xml  xenmgr_host.xml  xenmgr_vm.xml  xenvm.xml
rpcgen/: Backend.hs  Main.hs  Makefile  Model.hs  Setup.hs  Template.hs  Tools.hs  rpcgen.cabal
rpcgen/Backend/: C.hs  C2.hs  Camel.hs  Haskell.hs  Javascript.hs  Ruby.hs
rpcgen/templates/: ruby.xsl  template_client.h  template_client.hs  template_client.js  template_client.ml  template_client_pgetter.c  template_client_psetter.c  template_const.hs  template_notify.hs  template_obj_header.h  template_obj_imp.c  template_server.hs  template_server.ml
