Name:       xc-rpcgen
Version:    1.0
Cabal-Version:  >= 1.2
Author:     Tomasz Wroblewski
Stability:  experimental
Build-Type: Simple
Data-Files: templates/*.h templates/*.c templates/*.hs templates/*.ml templates/*.js templates/*.xsl

Executable xc-rpcgen
  Build-Depends:
    base,
    containers,
    process,
    filepath,
    directory,
    text,
    HaXml == 1.25.*,
    dbus == 1.2.*
  Main-Is: Main.hs
  GHC-Options: -O2 -fwarn-incomplete-patterns -optc-no-pie -optl-no-pie -optP-no-pie
